# novas

./: .gitattributes  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: equation_of_time_chart.rs  paris_solar_time.rs
novasc3.1/: eph_manager.c  novas.c
scripts/: generate_parity_baseline.sh
src/: lib.rs
tests/: api_shape.rs  parity_against_c.rs  wasm_bindgen_smoke.rs  wasm_cio_truth.rs  wasm_make_object.rs  wasm_virtual_file.rs
tests/common/: parity_expected.rs
tests/data/: parity_expected.txt
