[package]
name = "novas"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Rust bindings to USNO NOVAS C3.1 astrometry library"
readme = "README.md"
links = "novas_c31"
build = "build.rs"

[features]
default = ["embedded-cio-ra"]
embedded-cio-ra = []

[dependencies]

[build-dependencies]
bindgen = "0.72"
cc = "1.1"
minreq = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
