[package]
name = "novas"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Rust bindings to United States Naval Observatory's NOVAS C3.1 astrometry library"
readme = "README.md"
links = "novas_c31"
build = "build.rs"

[features]
default = ["embedded-cio-ra"]
embedded-cio-ra = []

[dependencies]

[build-dependencies]
bindgen = "0.72"
cc = "1.1"
minreq = { version = "2", default-features = false, features = ["https-native"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
