[package]
name = "novas"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Rust bindings to United States Naval Observatory's NOVAS C3.1 astrometry library"
readme = "README.md"
repository = "https://github.com/Mubelotix/novas"
links = "novas_c31"
build = "build.rs"

[features]
default = ["embedded-cio-ra"]
embedded-cio-ra = []

[dependencies]

[build-dependencies]
bindgen = "0.72"
cc = "1.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
